Fix carousel Layout excessive width of cards from Covers
- Applied to Take Action and Content blocks

--- a/assets/src/styles/blocks/Covers/styles/TakeActionCovers.scss
+++ b/assets/src/styles/blocks/Covers/styles/TakeActionCovers.scss
@@ -7,6 +7,7 @@
     }
 
     .cover {
+      width: 300px;
       min-width: 300px;
 
       &:not(:last-child) {
@@ -14,6 +15,7 @@
       }
 
       @include medium-and-up {
+        width: 296px;
         min-width: 296px;
 
         &:not(:last-child) {
@@ -22,6 +24,7 @@
       }
 
       @include x-large-and-up {
+        width: 356px;
         min-width: 356px;
       }
     }
